
  * Don't include trailing period, question mark, or exclamation point in target (URL) of autolink (#3860)
  * Don't assign nil value to named attribute mapped to absent positional attribute when parsing attrlist (#4033)
  * Remove leading and trailing spaces around role on inline phrase (#4035)
  * Ignore empty role on inline phrase defined using legacy syntax and followed by comma (#4035)
  * Use xreftext of document as fallback link text for inter-document xref that resolves to current document when no link text is provided (#4032)
  * Use xreftext of document as fallback link text for interal xref with empty fragment when no link text is provided (#4032)

Improvements::

  * Format keyboard references in monospace in manpage output

Build / Infrastructure::

  * Get remaining invoker tests working on JRuby 9.1 for Windows

// tag::compact[]
== 2.0.14 (2021-04-19) - @mojavelinux

Bug Fixes::

  * Don't allow AsciiDoc table cell to set document attribute that was unset from the API (exceptions include: `compat-mode`, `toc`, `showtitle`, and `notitle`) (#4017)
  * Ensure default document attributes unset in parent document remain unset in AsciiDoc table cell (#2586)
  * Allow the `showtitle` / `notitle` attribute to be toggled in an AsciiDoc table cell if set or unset in parent document (#4018)
  * Ensure mtime of input file honors TZ environment variable on JRuby for Windows (affects value of `docdatetime` attribute) (#3550)
  * Honor caption attribute on blocks that support captioned title even if corresponding `*-caption` document attribute (e.g., `example-caption`) is not set (#4023)
  * Suppress missing attribute warning when applying substitutions to implicit document title for assignment to intrinsic `doctitle` attribute (#4024)
  * Increment counter (but not the corresponding attribute) if attribute is locked (#4013)

Improvements::

  * Use attribute, if set, as seed value for counter even if not already registered as a counter (#4014)