@@ -23,8 +23,9 @@ Bug Fixes::
   * Don't assign nil value to named attribute mapped to absent positional attribute when parsing attrlist (#4033)
   * Remove leading and trailing spaces around role on inline phrase (#4035)
   * Ignore empty role on inline phrase defined using legacy syntax and followed by comma (#4035)
-  * Use xreftext of document as fallback link text for inter-document xref that resolves to current document when no link text is provided (#4032)
-  * Use xreftext of document as fallback link text for interal xref with empty fragment when no link text is provided (#4032)
+  * Use xreftext on document as fallback link text in HTML output for inter-document xref that resolves to current document when no link text is provided (#4032)
+  * Use xreftext on document as fallback link text in HTML output for internal xref with empty fragment when no link text is provided (#4032)
+  * Use document ID as linkend in DocBook output for internal xref with empty fragment; auto-generating one if necessary (#4032)
 
 Improvements::
 
